form inputs created

--- a/index.html
+++ b/index.html
@@ -10,6 +10,49 @@
     <title>Weekend jQuery Salary Calculator</title>
 </head>
 <body>
+    <h1>
+        Employee Salary Calculator
+    </h1>
+
+    <form id="employeeForm">
+        <!--First name input-->
+        <input
+            class="formInputs"
+            id="firstNameInput"
+            type="text"
+            placeholder="First Name"
+        />
+        <!--Last name input-->
+        <input
+            class="formInputs"
+            id="lastNameInput"
+            type="text"
+            placeholder="Last Name"
+        />
+        <!--ID number input-->
+        <input
+            class="formInputs"
+            id="idNumberInput"
+            type="text"
+            placeholder="ID Number"
+        />
+        <!--job title input-->
+        <input
+            class="formInputs"
+            id="jobTitleInput"
+            type="text"
+            placeholder="Job Title"
+        />
+        <!--annual salary input-->
+        <input
+            class="formInputs"
+            id="annualSalaryInput"
+            type="number"
+            placeholder="Salary"
+            step="any"
+            min="0"
+        />
+    </form>
     
 </body>
 </html>
