submit button added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             step="any"
             min="0"
         />
+        <!--Submit Button-->
+        <button id="submitButton">Submit</button>
     </form>
     
 </body>
