new function to create employee objects - pushes employees to an array - clears all fields

--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
             min="0"
         />
         <!--Submit Button-->
-        <button id="submitButton">Submit</button>
+        <input  
+            class="formInputs"
+            id="submitButton"
+            type="submit"
+            value="Submit"
     </form>
     
 </body>
