--- a/index.html
+++ b/index.html
@@ -54,11 +54,24 @@
         />
         <!--Submit Button-->
         <input  
-            class="formInputs"
             id="submitButton"
             type="submit"
             value="Submit"
     </form>
-    
+
+    <table class="employeeDataTable">
+        <thead>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Employee ID #</th>
+                <th>Job Title</th>
+                <th>Annual Salary</th>
+            </tr>
+        </thead>
+        <tbody id="employeeList">
+            <!--Employee Data goes here!!-->
+        </tbody>
+    </table>
 </body>
 </html>
