annual salary total functionality added

--- a/index.html
+++ b/index.html
@@ -71,7 +71,15 @@
         </thead>
         <tbody id="employeeList">
             <!--Employee Data goes here!!-->
+            <tr>
+                
+                
+            </tr>
         </tbody>
     </table>
+    <h3 class="salaryTotals">
+        <span id="annualSalaryTotal">Annual Salary Total: <span id="annualNumber"></span></span>
+        <span id="monthlySalaryTotal">Monthly Salary Total: <span id="monthlyNumber"></span></span>
+    </h3>
 </body>
 </html>
