styling added but I have a bug that is throwing error 404

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <script src="jquery.js"></script>
     <script src="client.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Weekend jQuery Salary Calculator</title>
 </head>
 <body>
-    <h1>
+    <h1 class="topEmpty"></h1>
+    <h1 class="title">
         Employee Salary Calculator
     </h1>
 
@@ -57,9 +59,10 @@
             id="submitButton"
             type="submit"
             value="Submit"
+        />
     </form>
 
-    <table class="employeeDataTable">
+    <table class="table table-dark table-hover">
         <thead>
             <tr>
                 <th>First Name</th>
@@ -71,15 +74,12 @@
         </thead>
         <tbody id="employeeList">
             <!--Employee Data goes here!!-->
-            <tr>
-                
-                
-            </tr>
         </tbody>
     </table>
     <h3 class="salaryTotals">
         <span id="annualSalaryTotal">Annual Salary Total: <span id="annualNumber"></span></span>
         <span id="monthlySalaryTotal">Monthly Salary Total: <span id="monthlyNumber"></span></span>
     </h3>
+    <h1 class="empty"></h1>
 </body>
 </html>
